# ragpipe

./: .gitignore  .hadolint.yaml  .secrets.baseline  CLAUDE.md  Containerfile  Containerfile.rocm  README.md  SECURITY.md  pyproject.toml  ruff.toml  whitelist_vulture.py
.github/workflows/: ci.yml  container.yml  release.yml  security.yml
docs/: api.md  architecture.md  configuration.md  routing.md
examples/: routes-multi-host.yaml
ragpipe/: __init__.py  __main__.py  app.py  docstore.py  grounding.py  metrics.py  models.py  reranker.py  router.py
tests/: conftest.py  test_admin.py  test_crag.py  test_docstore.py  test_grounding.py  test_hypothesis.py  test_integration_crag.py  test_live.py  test_metrics.py  test_models.py  test_qdrant_cache.py  test_reranker.py  test_router.py  test_token_cap.py
