[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragpipe"
version = "0.1.0"
description = "RAG proxy with corpus-preferring grounding and citation validation"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "qdrant-client",
    "onnxruntime",
    "tokenizers",
    "huggingface-hub",
    "numpy",
    "asyncpg",
    "psycopg2-binary",
    "pyyaml",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "hypothesis"]

[project.scripts]
ragpipe = "ragpipe.app:main"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["qdrant_client.*", "migraphx.*", "semantic_router.*", "asyncpg.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: live integration tests requiring a running ragpipe instance",
]

[tool.coverage.run]
source = ["ragpipe"]

[tool.coverage.report]
fail_under = 54
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
